fix: adjust z-index and hover states for product images

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -455,7 +455,7 @@ video {
 .product-image-tag{
   position: absolute;
   top: 4px;
-  z-index: 10;
+  z-index: 11;
   border-radius: 9999px;
   border-width: 1px;
   border-style: solid;
@@ -486,6 +486,12 @@ video {
 }
 .tw-top-0{
   top: 0px;
+}
+.tw-z-10{
+  z-index: 10;
+}
+.tw-z-\[9\]{
+  z-index: 9;
 }
 .tw-mb-3{
   margin-bottom: 12px;
@@ -616,12 +622,27 @@ video {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
+.tw-transition{
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
 .tw-duration-300{
   transition-duration: 300ms;
 }
 .tw-text-mobile-size{
   font-size: 28px;
   line-height: 24px;
+}
+.hover\:tw-bg-red-500:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
+}
+.tw-group:hover .group-hover\:tw-bg-red-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity, 1));
 }
 .tw-group:hover .group-hover\:tw-opacity-0{
   opacity: 0;
