--- a/tailwind.css
+++ b/tailwind.css
@@ -12,7 +12,7 @@
   }
 
   .product-image-tag {
-    @apply tw-z-10 tw-absolute tw-border tw-border-solid tw-rounded-full tw-py-1 tw-px-2 tw-text-[8px] md:tw-text-[10px] tw-font-normal tw-top-1 md:tw-top-2;
+    @apply tw-z-[11] tw-absolute tw-border tw-border-solid tw-rounded-full tw-py-1 tw-px-2 tw-text-[8px] md:tw-text-[10px] tw-font-normal tw-top-1 md:tw-top-2;
   }
 }
 
